Fixed about paragraph spacing

--- a/css/main.css
+++ b/css/main.css
@@ -369,7 +369,9 @@ footer .copyright p {
   margin: 20px 0 30px 0;
 }
 
-
+#about .paragraph-bottom {
+  margin-top: 10px;
+}
 
 
 
@@ -859,6 +861,11 @@ footer .copyright {
   padding-left: 5px;
   padding-right: 5px;
 }
+
+#about .paragraph-bottom {
+  margin-top: 0px;
+}
+
 
 #about .content-wrapper h2 {
   font-size: 2.5em;
